shift-request update